# akarithm

./: CMakeLists.txt  README.md
include/akarithm/: problem_1.hpp  problem_1010.hpp  problem_1029.hpp  problem_1038.hpp  problem_105.hpp  problem_1051.hpp  problem_106.hpp  problem_107.hpp  problem_117.hpp  problem_121.hpp  problem_122.hpp  problem_1221.hpp  problem_1281.hpp  problem_1282.hpp  problem_1283.hpp  problem_1290.hpp  problem_13.hpp  problem_1304.hpp  problem_1305.hpp  problem_1332.hpp  problem_1335.hpp  problem_1337.hpp  problem_1338.hpp  problem_1339.hpp  problem_1340.hpp  problem_1346.hpp  problem_1347.hpp  problem_1348.hpp  problem_1349.hpp  problem_14.hpp  problem_145.hpp  problem_160.hpp  problem_18.hpp  problem_19.hpp  problem_203.hpp  problem_206.hpp  problem_21.hpp  problem_22.hpp  problem_226.hpp  problem_23.hpp  (+42 more)
include/data_structure/: bst_iterator.hpp  inorder_iterator.hpp  list_node.hpp  minivec.hpp  node.hpp  node_next.hpp  postorder_iterator.hpp  preorder_iterator.hpp  tree_node.hpp  variable_guard.hpp  vector.hpp
include/math/series/: harmonic_series.hpp
include/util/generic/: bst_search.hpp  call_n.hpp  call_n_acc.hpp  find_range.hpp  fold.hpp  fold_each_n.hpp  group_by.hpp  group_by_minify.hpp  group_fold.hpp  is_number.hpp  is_palindrome.hpp  iter_to_set.hpp  map.hpp  n_sum.hpp  quicksort.hpp  reverse_if.hpp  set_equality.hpp  sliding_window.hpp  split.hpp  zip.hpp  zip_accumulate.hpp  zip_fold.hpp
include/util/integer/: digit_fold.hpp
include/util/string/: group_by.hpp  split.hpp
src/akarithm/: problem_1.cpp  problem_1010.cpp  problem_1029.cpp  problem_1038.cpp  problem_105.cpp  problem_1051.cpp  problem_106.cpp  problem_107.cpp  problem_117.cpp  problem_121.cpp  problem_122.cpp  problem_1221.cpp  problem_1281.cpp  problem_1282.cpp  problem_1283.cpp  problem_1290.cpp  problem_13.cpp  problem_1304.cpp  problem_1305.cpp  problem_1332.cpp  problem_1335.cpp  problem_1337.cpp  problem_1338.cpp  problem_1339.cpp  problem_1340.cpp  problem_1346.cpp  problem_1347.cpp  problem_1348.cpp  problem_1349.cpp  problem_14.cpp  problem_145.cpp  problem_160.cpp  problem_173.cpp  problem_18.cpp  problem_19.cpp  problem_203.cpp  problem_206.cpp  problem_21.cpp  problem_22.cpp  problem_226.cpp  (+43 more)
src/util/generic/: bst_iterator.cpp  bst_search.cpp  find_range.cpp  group_by.cpp  group_by_minify.cpp  inorder_iterator.cpp  is_palindrome.cpp  postorder_iterator.cpp  preorder_iterator.cpp  sliding_window.cpp  zip.cpp  zip_accumulate.cpp
test/data_structure/: minivec.cpp  variable_guard.cpp  vector.cpp
test/math/series/: harmonic_series.cpp
test/util/generic/: bst_iterator.cpp  bst_search.cpp  find_range.cpp  fold.cpp  fold_each_n.cpp  group_by.cpp  group_by_minify.cpp  group_fold.cpp  inorder_iterator.cpp  is_number.cpp  is_palindrome.cpp  map.cpp  postorder_iterator.cpp  preorder_iterator.cpp  quicksort.cpp  reverse_if.cpp  set_equality.cpp  sliding_window.cpp  split.cpp  zip.cpp  zip_fold.cpp
test/util/integer/: digit_fold.cpp
test/util/string/: group_by.cpp  split.cpp
